# ICPArtGallery

./: .env.example  .gitignore  Cargo.toml  README.md  canister_ids.json  dfx.json  package-lock.json  package.json  tsconfig.json
.husky/: pre-commit  precommit-check.js
src/icp-art-gallery-backend/: Cargo.toml  icp-art-gallery-backend.did
src/icp-art-gallery-backend/src/: http.rs  lib.rs
src/icp-art-gallery-frontend/: README.md  eslint.config.mts  index.html  package.json  postcss.config.mjs  prettier.config.cjs  tailwind.config.js  tsconfig.json  vite.config.js
src/icp-art-gallery-frontend/src/: App.js  App.tsx  actor.ts  index.scss  main.js  main.tsx
src/icp-art-gallery-frontend/src/components/: ErrorModal.tsx  Portal.tsx
src/icp-art-gallery-frontend/src/components/@add-nft/: AddNft.tsx  AddNftModal.tsx  style.scss
src/icp-art-gallery-frontend/src/components/@gallery/: Gallery.tsx
src/icp-art-gallery-frontend/src/components/@navbar/: Navbar.tsx  style.scss
src/icp-art-gallery-frontend/src/components/@wallet-login/: PlugLogin.tsx
src/icp-art-gallery-frontend/src/context/: AuthContext.tsx
src/icp-art-gallery-frontend/src/context/@nfts/: GaleryContext.tsx  NftProvider.tsx
src/icp-art-gallery-frontend/src/context/@wallet-login/: AuthContext.tsx
src/icp-art-gallery-frontend/src/hooks/auth/: plug-auth.ts
src/icp-art-gallery-frontend/src/interfaces/: card-props.ts  index.ts  nft.ts
src/icp-art-gallery-frontend/src/types/: plug.d.ts  sort-options.ts
src/icp-art-gallery-frontend/src/utils/: fetch-all-nfts.ts
(+15 files in other folders)
