[package]
name = "icp-art-gallery-backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
candid = "0.10"
ic-cdk = "0.17"
ic-cdk-timers = "0.11"
ic-cdk-macros = "0.17.1"
ic-certified-map = "0.3"
serde_cbor = "0.11.2"
http = "1.3.1"
serde = { version = "1.0.219", features = ["derive"] }
percent-encoding = "2.3.1"
sha2 = "0.10.8"
base64 = "0.22.1" # Feel free to remove this dependency if you don't need timers
